fixed alignment in form field

--- a/main.css
+++ b/main.css
@@ -13,9 +13,6 @@ body {
 	background-attachment: fixed;
 }
 
-a {
-	text-decoration: none;
-}
 
 /****************************************************************
 	HEADER
@@ -35,10 +32,9 @@ header {
 	font-family: 'sansita', cursive;
 	color: white;
 	font-size: 40px;
-	margin-left: 15px;
+	margin-left: 12px;
 	position: relative;
-	top: -20px;
-	right: -15px;
+	top: -25px;
 }
 
 #name a {
@@ -50,7 +46,7 @@ header {
 	font-family: 'Libre Baskerville', serif;
 	margin-left: 19px;
 	position: relative;
-	top: -25px;
+	top: -30px;
 	right: -60px;
 	letter-spacing: 1px;
 	color: white;
@@ -59,7 +55,7 @@ header {
 #navigation {
 	text-align: right;
 	position: relative;
-	top: -80px;
+	top: -79px;
 	right: 20px;
 
 }
@@ -75,6 +71,7 @@ header {
 	border-radius: 4px;
 	box-shadow: 4px 4px;
 	list-style: none;
+	color: rgb(3,6,9);
 }
 
 
@@ -98,9 +95,17 @@ header {
 	padding: 20px 0;
 	font-family: 'Montserrat', sans-serif;
 }
+a {
+	text-decoration: none;
+	color: black;
+}
+a:visited {
+	color: black;
+}
 
-
-
+ul li {
+	list-style: none;
+}
 h1 {
 	font-family: 'Poiret One', cursive;
 	margin: 26px 0 0 8px;
@@ -109,15 +114,19 @@ h1 {
 .sections {
 	position: relative;
 	top: 150px;
-	background-color: rgba(145,140,142,0.8);
-	
 }
 
 /****************************************************************
 	ABOUT SECTION
 ****************************************************************/
 #about {
-	width: 700;
+	width: 700px;
+	height: 560px;
+	background-color: rgba(145,140,142,0.6);
+	margin: 0 auto;
+	padding: 0 10px;
+	margin-bottom: 20px;
+	border-radius: 4px;
 }
 
 #about p {
@@ -145,17 +154,22 @@ h1 {
 }
 
 #testimonials{
-	height: 600px;
 	font-family: 'Abel', sans-serif;
+	width: 700px;
+	height: 600px;
+	background-color: rgba(145,140,142,0.6);
+	margin: 0 auto;
+	padding: 0 10px;
+	margin-bottom: 20px;
+	border-radius: 4px;
 }
 
 #testimonials div {
-	display: inline-block;
-	margin: 0 20px 5px 200px;
+	margin: 20px 20px 5px 5px;
 	text-align: left;
 	padding-left: 5px;
 	padding-bottom: 5px;
-	width: 900px;
+	width: 600px;
 
 }
 
@@ -169,6 +183,12 @@ h1 {
 #locations {
 	width: 100%;
 	font-family: 'Abel', sans-serif;
+	width: 800px;
+	height: 600px;
+	background-color: rgba(145,140,142,0.6);
+	margin: 0 auto;
+	margin-bottom: 20px;
+	border-radius: 4px;
 }
 
 .location-name {
@@ -177,8 +197,8 @@ h1 {
 }
 
 table img {
-	width: 300px;
-	height: 300px;
+	width: 180px;
+	height: 180px;
 	padding: 4px;
 	border-radius: 10px;
 }
@@ -187,8 +207,13 @@ table img {
 	PRICING AND HOURS SECTION
 ****************************************************************/
 #pricing {
-	width: 100%;
+	width: 55%;
+	height: 600px;
 	font-family: 'Abel', sans-serif;
+	background-color: rgba(145,140,142,0.6);
+	margin: 0 auto;
+	margin-bottom: 20px;
+	border-radius: 4px;
 }
 
 
@@ -199,69 +224,75 @@ table img {
 	letter-spacing: 1px;
 }
 
+#pricing-description ul li {
+	list-style: none;
+	text-align: center;
+	margin: 4px;
+	position: relative;
+	left: -15px;
+	letter-spacing: 2px;
+}
+.title {
+	font-weight: bold;
+	text-decoration: underline;
+}
+
 #pricing-description p {
 	text-align: center;
 	letter-spacing: 2px;
 
 }
 
-#pricing-description ul li {
-	position: relative;
-	left: -15px;
-	letter-spacing: 2px;
-}
-
-
 /****************************************************************
 	RESERVATION SECTION
 ****************************************************************/
 #reservation{
-	width: 100%;
+	width: 57%;
+	height: 1050px;
 	margin-bottom: 20px;
 	font-family: 'Abel', sans-serif;
+	background-color: rgba(145,140,142,0.6);
+	margin: 0 auto;
+	margin-bottom: 20px;
+	border-radius: 4px;
 }
 
 fieldset {
-	width: 700px;
-	height: 270px;
+	width: 460px;
+	height: 280px;
 	margin: 0 auto;
-	text-align: center;
-	line-height: 40px;
+	margin-bottom: 15px;
+	text-align: left;
 }
-
-#registration_button {
-	width: 726px;
-	height: 50px;
-	text-align: center;
-	border: 2px solid black;
-	background-color: lightgray;
-}
-
-#centered-submit {
-	text-align: center;
-	margin: 10px 0 10px 0;
-}
-
-input[type="textarea"] {
-	width: 600px;
-	height: 200px;
-	border: 1px solid gray;
-}
-input[type="date"]{
-	text-align: center;
+legend {
+	font-size: 20px;
+	font-weight: bold;
 }
 
 input {
 	width: 300px;
 	text-align: center;
+	display: block;
+	margin: 0 auto;
 }
-
-
 
 fieldset select {
 	display: block;
 	margin: 0 auto;
 	width: 400px;
+	text-align: left;
+}
+input[type="textarea"] {
+	width: 400px;
+	height: 200px;
+}
+
+#registration-button {
+	width: 400px;
+	height: 50px;
+	border: 2px solid black;
+	background-color: white;
+	margin: 0 auto;
 }
 
 
